body-parser, express-session 추가

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "start": "supervisor start app01.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "supervisor": "^0.12.0"
   }
 }
